--- a/web/web/js/jskey/demo/jskey_des.html
+++ b/web/web/js/jskey/demo/jskey_des.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<script type="text/javascript" src="../jskey_des.js"></script>
+<script type="text/javascript" src="../../jskey/jskey_des.js"></script>
 <script type="text/javascript">
 function doDes(type, encid, decid){
 	var key = document.getElementById("key").value;
