--- a/web/web/js/jskey/demo/jskey_flash.html
+++ b/web/web/js/jskey/demo/jskey_flash.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <title></title>
-<script src="../jskey_flash.js"></script>
+<script type="text/javascript" src="../../jskey/jskey_flash.js"></script>
 </head>
 <body>
 <h1>jQuery Flash Plugin</h1>
