--- a/web/web/js/jskey/demo/jskey_form.html
+++ b/web/web/js/jskey/demo/jskey_form.html
@@ -9,7 +9,7 @@
 		hr {}
 	</style>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<script src="../jskey_core.js" type="text/javascript"></script>
+	<script type="text/javascript" src="../../jskey/jskey_core.js"></script>
 	<script type="text/javascript">
 	function arrToString(_arr)
 	{
