--- a/web/web/js/jskey/demo/jskey_dialog.html
+++ b/web/web/js/jskey/demo/jskey_dialog.html
@@ -10,9 +10,9 @@
 	</style>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" type="text/css" href="../../easyui//themes/default/easyui.css">
-	<script src="../../jquery/jquery.js" type="text/javascript"></script>
-	<script src="../../easyui/jquery.easyui.js" type="text/javascript"></script>
-	<script src="../jskey_core.js" type="text/javascript"></script>
+	<script type="text/javascript" src="../../jquery/jquery.js"></script>
+	<script type="text/javascript" src="../../easyui/jquery.easyui.js"></script>
+	<script type="text/javascript" src="../../jskey/jskey_core.js"></script>
 	<script type="text/javascript">
 		$jskey.dialog.callback = function(){
 			alert('返回值是:' + ($jskey.dialog.returnValue.hello));
@@ -30,15 +30,15 @@
 	<div class="title">$jskey.dialog.showDialog</div>
 	
 	<br /><hr /><br />
-	<input type="button" value="对话框" onclick="$jskey.dialog.showDialog({title:'我的标题', url:'jskey_dialog_demo_return.html',args:{v:1}});" /> 绝对路径<br />
-	<input type="button" value="对话框" onclick="$jskey.dialog.showDialog({callback:mycallback,title:'我的标题', url:'jskey_dialog_demo_return.html',args:{v:1}});" /> 绝对路径（自定义函数）<br />
+	<input type="button" value="对话框" onclick="$jskey.dialog.showDialog({title:'我的标题', url:'jskey_dialog_return.html',args:{v:1}});" /> 绝对路径<br />
+	<input type="button" value="对话框" onclick="$jskey.dialog.showDialog({callback:mycallback,title:'我的标题', url:'jskey_dialog_return.html',args:{v:1}});" /> 绝对路径（自定义函数）<br />
 	<br /><hr /><br />
 
 	<div class="title">window.showModalDialog</div>
 	
 	<br /><hr /><br />
 	<input type="button" value="我的对话框" onclick="$jskey.dialog.show({title:'我的标题', url:'http://www.baidu.com/',args:{v:1}});" /> 绝对路径<br />
-	<input type="button" value="我的返回值" onclick="alert($jskey.dialog.show({title:'我的百度', url:'jskey_dialog_demo_return.html',args:{v:1}})  );" /> 相对路径<br />
+	<input type="button" value="我的返回值" onclick="alert($jskey.dialog.show({title:'我的百度', url:'jskey_dialog_return.html',args:{v:1}})  );" /> 相对路径<br />
 	<br /><hr /><br />
 
 	<div class="title">window.open</div>
