--- a/web/web/js/jskey/demo/jskey_flash_jquery.html
+++ b/web/web/js/jskey/demo/jskey_flash_jquery.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <title></title>
 <script type="text/javascript" src="../../jquery/jquery.js"></script>
-<script src="../jskey_flash.js"></script>
+<script type="text/javascript" src="../../jskey/jskey_flash.js"></script>
 <script type="text/javascript">
 $(function(){
 	$("#example").flash({src:"jskey_flash.swf",width:360,height:215});
