--- a/web/web/js/jskey/demo/jskey_tooltip.html
+++ b/web/web/js/jskey/demo/jskey_tooltip.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <script type="text/javascript" src="../../jquery/jquery.js"></script>
-<script type="text/javascript" src="../jskey_core.js"></script>
+<script type="text/javascript" src="../../jskey/jskey_core.js"></script>
 <style type="text/css"> td{padding:10px;}</style>
 <script type="text/javascript">
 function mymsg(){
