--- a/web/web/js/jskey/demo/jskey_calendar.html
+++ b/web/web/js/jskey/demo/jskey_calendar.html
@@ -1,12 +1,14 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui"/>
+<title>jskey_calendar</title>
 <style>
 input {width:205px; cursor:pointer; margin : 1px 0px 1px 0px;}
 </style>
-<meta charset="UTF-8" />
-<script type="text/javascript" src="../jskey_core.js"></script>
-<script type="text/javascript" src="../jskey_calendar.js"></script>
+<script type="text/javascript" src="../../jskey/jskey_core.js"></script>
+<script type="text/javascript" src="../../jskey/jskey_calendar.js"></script>
 </head>
 <body style="font-size:12px;">
 <br /><br /><br /><br /><br />
