--- a/web/web/js/jskey/demo/jskey_flash.html
+++ b/web/web/js/jskey/demo/jskey_flash.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
-<title></title>
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui"/>
+<title>jskey_flash</title>
 <script type="text/javascript" src="../../jskey/jskey_flash.js"></script>
 </head>
 <body>
