--- a/web/web/js/jskey/demo/jskey_tooltip.html
+++ b/web/web/js/jskey/demo/jskey_tooltip.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui"/>
+<title>jskey_tooltip</title>
 <script type="text/javascript" src="../../jquery/jquery.js"></script>
 <script type="text/javascript" src="../../jskey/jskey_core.js"></script>
-<style type="text/css"> td{padding:10px;}</style>
+<style type="text/css">td{padding:10px;}</style>
 <script type="text/javascript">
 function mymsg(){
 	return "这是由自定义的mymsg函数返回的喔，还可以搞ajax之类的";
