--- a/web/web/js/jskey/demo/jskey_form.html
+++ b/web/web/js/jskey/demo/jskey_form.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style>
-		body {font-size:12px;}
-		input {cursor:pointer;}
-		div.title {color:#000000;font-size:30px;font-weight:bold;margin:10px auto;width:200px;text-align:center;}
-		div.box {border:#000000 3px solid;width:95%;padding:20px 20px;}
-		hr {}
-	</style>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<script type="text/javascript" src="../../jskey/jskey_core.js"></script>
-	<script type="text/javascript">
-	function arrToString(_arr)
+<meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui"/>
+<title>jskey_form</title>
+<style>
+	body {font-size:12px;}
+	input {cursor:pointer;}
+	div.title {color:#000000;font-size:30px;font-weight:bold;margin:10px auto;width:200px;text-align:center;}
+	div.box {border:#000000 3px solid;width:95%;padding:20px 20px;}
+	hr {}
+</style>
+<script type="text/javascript" src="../../jskey/jskey_core.js"></script>
+<script type="text/javascript">
+function arrToString(_arr)
+{
+	var _t = "[{id:\"" + _arr[0].id + "\",value:\"" + _arr[0].value + "\"}";
+	for(var i = 1;i < _arr.length;i++)
 	{
-		var _t = "[{id:\"" + _arr[0].id + "\",value:\"" + _arr[0].value + "\"}";
-		for(var i = 1;i < _arr.length;i++)
-		{
-			_t += ",{id:\"" + _arr[i].id + "\",value:\"" + _arr[i].value + "\"}";
-		}
-		_t += "]";
-		return _t;
+		_t += ",{id:\"" + _arr[i].id + "\",value:\"" + _arr[i].value + "\"}";
 	}
-	function objToString(_obj)
-	{
-		if(_obj == null) return null;
-		return "{id:\"" + _obj.id + "\",value:\"" + _obj.value + "\"}";
-	}
-	</script>
+	_t += "]";
+	return _t;
+}
+function objToString(_obj)
+{
+	if(_obj == null) return null;
+	return "{id:\"" + _obj.id + "\",value:\"" + _obj.value + "\"}";
+}
+</script>
 </head>
 <body>
 
