--- a/web/web/js/jskey/demo/jskey_page.html
+++ b/web/web/js/jskey/demo/jskey_page.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui"/>
 <title>jskey_pape</title>
+<script type="text/javascript" src="../../jskey/jskey_core.js"></script>
 <script type="text/javascript" src="../../jskey/jskey_page.js"></script>
 </head>
 <body>
