--- a/web/web/js/jskey/demo/jskey_validator.html
+++ b/web/web/js/jskey/demo/jskey_validator.html
@@ -42,89 +42,89 @@ td {text-align:left;}
 	</tr>
 	<tr>
 		<td>英文字母、数字、下划线</td>
-		<td><input type="text" name="TestChar" dataType="Char" value="" onfocus="$jskey.$('mv').innerHTML='我是旧的onfocus';" onblur="$jskey.$('mv').innerHTML='我是旧的onblur';" /><span id="mv"></span></td>
+		<td><input type="text" name="TestChar" datatype="Char" value="" onfocus="$jskey.$('mv').innerHTML='我是旧的onfocus';" onblur="$jskey.$('mv').innerHTML='我是旧的onblur';" /><span id="mv"></span></td>
 	</tr>
 	<tr>
 		<td>英文字母、数字、下划线</td>
-		<td><input type="text" name="TestChar2" dataType="Char" require="false" value="" msg="允许英文字母、数字、下划线，我是可以为空的喔" /></td>
+		<td><input type="text" name="TestChar2" datatype="Char" require="false" value="" msg="允许英文字母、数字、下划线，我是可以为空的喔" /></td>
 	</tr>
 	<tr>
 		<td>中文</td>
-		<td><input type="text" name="TestChinese" dataType="Chinese" value="" /></td>
+		<td><input type="text" name="TestChinese" datatype="Chinese" value="" /></td>
 	</tr>
 	<tr>
 		<td>Email</td>
-		<td><input type="text" name="TestEmail" dataType="Email" value="" /></td>
+		<td><input type="text" name="TestEmail" datatype="Email" value="" /></td>
 	</tr>
 	<tr>
 		<td>身份证号码</td>
-		<td><input type="text" name="TestIdCard" dataType="IdCard" value="" /></td>
+		<td><input type="text" name="TestIdCard" datatype="IdCard" value="" /></td>
 	</tr>
 	<tr>
 		<td>手机号码(纯数字)</td>
-		<td><input type="text" name="TestMobile" dataType="Mobile" value="" /></td>
+		<td><input type="text" name="TestMobile" datatype="Mobile" value="" /></td>
 	</tr>
 	<tr>
 		<td>金额</td>
-		<td><input type="text" name="TestMoney" dataType="Money" value="" /></td>
+		<td><input type="text" name="TestMoney" datatype="Money" value="" /></td>
 	</tr>
 	<tr>
 		<td>数字</td>
-		<td><input type="text" name="TestNumeral" dataType="Numeral" value="" /></td>
+		<td><input type="text" name="TestNumeral" datatype="Numeral" value="" /></td>
 	</tr>
 	<tr>
 		<td>电话号码</td>
-		<td><input type="text" name="TestPhone" dataType="Phone" value="" /></td>
+		<td><input type="text" name="TestPhone" datatype="Phone" value="" /></td>
 	</tr>
 	<tr>
 		<td>必填</td>
-		<td><input type="text" name="TestRequire" dataType="Require" value="" /></td>
+		<td><input type="text" name="TestRequire" datatype="Require" value="" /></td>
 	</tr>
 	<tr>
 		<td>必填(无空格)</td>
-		<td><input type="text" name="TestRequireCompact" dataType="RequireCompact" value="" /></td>
+		<td><input type="text" name="TestRequireCompact" datatype="RequireCompact" value="" /></td>
 	</tr>
 	<tr>
 		<td>前后不能有空格</td>
-		<td><input type="text" name="TestRequireTrim" dataType="RequireTrim" value="" /></td>
+		<td><input type="text" name="TestRequireTrim" datatype="RequireTrim" value="" /></td>
 	</tr>
 	<tr>
 		<td>Url</td>
-		<td><input type="text" name="TestUrl" dataType="Url" value="" /></td>
+		<td><input type="text" name="TestUrl" datatype="Url" value="" /></td>
 	</tr>
 	<tr>
 		<td>邮政编码</td>
-		<td><input type="text" name="TestZip" dataType="Zip" value="" /></td>
+		<td><input type="text" name="TestZip" datatype="Zip" value="" /></td>
 	</tr>
 	<tr>
 		<td>数值</td>
-		<td><input type="text" name="TestNumber" dataType="Number" value="" /></td>
+		<td><input type="text" name="TestNumber" datatype="Number" value="" /></td>
 	</tr>
 	<tr>
 		<td>正数</td>
-		<td><input type="text" name="TestNumberPlus" dataType="NumberPlus" value="" /></td>
+		<td><input type="text" name="TestNumberPlus" datatype="NumberPlus" value="" /></td>
 	</tr>
 	<tr>
 		<td>负数</td>
-		<td><input type="text" name="TestNumberMinus" dataType="NumberMinus" value="" /></td>
+		<td><input type="text" name="TestNumberMinus" datatype="NumberMinus" value="" /></td>
 	</tr>
 	<tr>
 		<td>整数</td>
-		<td><input type="text" name="TestInteger" dataType="Integer" value="" /></td>
+		<td><input type="text" name="TestInteger" datatype="Integer" value="" /></td>
 	</tr>
 	<tr>
 		<td>正整数</td>
-		<td><input type="text" name="TestIntegerPlus" dataType="IntegerPlus" value="" /></td>
+		<td><input type="text" name="TestIntegerPlus" datatype="IntegerPlus" value="" /></td>
 	</tr>
 	<tr>
 		<td>负整数</td>
-		<td><input type="text" name="TestIntegerMinus" dataType="IntegerMinus" value="" /></td>
+		<td><input type="text" name="TestIntegerMinus" datatype="IntegerMinus" value="" /></td>
 	</tr>
 	<tr>
 		<td>日期比较</td>
 		<td>
 		开始：<input type="text" id="DateCheckToAbc" name="TestDateCheckTo" value="" /><br />
-		结束：<input type="text" name="TestDateCheck" dataType="DateCheck" operator=">=" to="DateCheckToAbc" value="" />
+		结束：<input type="text" name="TestDateCheck" datatype="DateCheck" operator=">=" to="DateCheckToAbc" value="" />
 		</td>
 	</tr>
 	<tr>
@@ -133,7 +133,7 @@ td {text-align:left;}
 	</tr>
 	<tr>
 		<td>文件名</td>
-		<td><input type="text" name="TestFilename" dataType="Filename" value="" /></td>
+		<td><input type="text" name="TestFilename" datatype="Filename" value="" /></td>
 	</tr>
 	<tr>
 		<td>所在省份：</td>
@@ -141,7 +141,7 @@ td {text-align:left;}
 			广东<input name="Province" value="1" type="checkbox" />
 			陕西<input name="Province" value="2" type="checkbox" />
 			浙江<input name="Province" value="3" type="checkbox" />
-			江西<input name="Province" value="4" type="checkbox" dataType="Group"  msg="必须选定一个省份" />
+			江西<input name="Province" value="4" type="checkbox" datatype="Group"  msg="必须选定一个省份" />
 		</td>
 	</tr>
 	<tr>
@@ -150,31 +150,31 @@ td {text-align:left;}
 			运动<input name="Favorite" value="1" type="checkbox" />
 			上网<input name="Favorite" value="2" type="checkbox" />
 			音乐<input name="Favorite" value="3" type="checkbox" />
-			看书<input name="Favorite" value="4" type="checkbox" dataType="Group" min="2" max="3"  msg="必须选择2~3种爱好" />
+			看书<input name="Favorite" value="4" type="checkbox" datatype="Group" min="2" max="3"  msg="必须选择2~3种爱好" />
 		</td>
 	</tr>
 	<tr>
 		<td>输入长度范围</td>
-		<td><input type="text" name="TestLimit" dataType="Limit" min="10" max="20" msg="长度10到20字" value="" /></td>
+		<td><input type="text" name="TestLimit" datatype="Limit" min="10" max="20" msg="长度10到20字" value="" /></td>
 	</tr>
 	<tr>
 		<td>输入长度范围（字符）</td>
-		<td><input type="text" name="TestLimitB" dataType="LimitB" min="10" max="20" msg="长度10到20字节" value="" /></td>
+		<td><input type="text" name="TestLimitB" datatype="LimitB" min="10" max="20" msg="长度10到20字节" value="" /></td>
 	</tr>
 	<tr>
 		<td>重复</td>
 		<td>
-			密码：<input type="text" id="RepeatToAbc" name="TestRepeatTo" dataType="Password" value="" /><br />
-			重复：<input type="text" name="TestRepeat" dataType="Repeat" to="RepeatToAbc" value="" />
+			密码：<input type="text" id="RepeatToAbc" name="TestRepeatTo" datatype="Password" value="" /><br />
+			重复：<input type="text" name="TestRepeat" datatype="Repeat" to="RepeatToAbc" value="" />
 		</td>
 	</tr>
 	<tr>
 		<td>限制大小</td>
-		<td><input type="text" name="TestRange" dataType="Range" max="20" msg="小于20，这是自定义的喔" value="" /></td>
+		<td><input type="text" name="TestRange" datatype="Range" max="20" msg="小于20，这是自定义的喔" value="" /></td>
 	</tr>
 	<tr>
 		<td>&nbsp;</td>
-		<td><input type="text" name="TestRange2" dataType="Range" min="10" max="20" msg="数字10到20" alertMsg="数字10到20，这个是自定义的喔" value="" /></td>
+		<td><input type="text" name="TestRange2" datatype="Range" min="10" max="20" msg="数字10到20" alertMsg="数字10到20，这个是自定义的喔" value="" /></td>
 	</tr>
 	<tr>
 		<td>&nbsp;</td>
@@ -182,7 +182,7 @@ td {text-align:left;}
 	</tr>
 	<tr>
 		<td>自定义函数</td>
-		<td><input type="text" name="TestFuntion" dataType="Function" fn="myfn" value="" msg="请输入“good”" /></td>
+		<td><input type="text" name="TestFuntion" datatype="Function" fn="myfn" value="" msg="请输入“good”" /></td>
 	</tr>
 </table>
 </div>
