--- a/DsDemo/DemoJava/web/manage/frame/top.html
+++ b/DsDemo/DemoJava/web/manage/frame/top.html
@@ -44,7 +44,7 @@ function doLogo(img){
 		<div class="right">
 			<img class="img" src="style/top/home.png"/><a title="首页" onclick="parent.frames['middleFrame'].$('#tt').tabs('select', 0);" href="#">首页</a>
 			<img class="img" src="style/top/reload.png"/><a title="刷新主页面" onclick="reload();" href="#">刷新</a>
-			<img class="img" src="style/top/logout.png"/><a title="退出系统" target="_top" onclick="" href="../login.html">退出</a>
+			<img class="img" src="style/top/logout.png"/><a title="退出系统" target="_top" onclick="" href="../../login.html">退出</a>
 			&nbsp; <img class="img" style="cursor:pointer;" onclick="doLogo(this); return false;" src="style/top/fullscreen.png" title="放大" />
 		</div>
 	</div>
