--- a/DsEp/web/header.html
+++ b/DsEp/web/header.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title></title>
-<link rel="stylesheet" href="/DsEp/static/web/web.css" />
+<link rel="stylesheet" href="./static/web/web.css" />
 <style type="text/css">
 </style>
 </head>
