--- a/DsDemo/DemoJava/web/login.html
+++ b/DsDemo/DemoJava/web/login.html
@@ -52,7 +52,7 @@ a:hover{color:#0000ff;text-decoration:underline;}
 <body onload="$('account').focus();">
 <div class="view">
   <div class="title">广东省广州市计算机管理控制程序</div>
-  <form id="v" action="loginAction.jsp" method="post">
+  <form id="v" action="index.jsp" method="post">
   <div class="login">
 	<div class="box"><div class="title">用户登录</div></div>
 	<div class="box"><div class="vbox">
