--- a/DsDemo/DemoJava/web/mylogin.html
+++ b/DsDemo/DemoJava/web/mylogin.html
@@ -52,7 +52,7 @@ a:hover{color:#fff;text-decoration:underline;}
 <body onload="$('account').focus();">
 <div class="title">广东省广州市计算机管理控制程序</div>
 <div class="view">
-  <form id="v" action="index.html" method="post">
+  <form id="v" action="index.jsp" method="post">
   <div class="login">
 	<div class="box" style="display:none;"><div class="title">用户登录</div></div>
 	<div class="box"><div class="vbox">
