--- a/web/web/fonts/dsworkfont.html
+++ b/web/web/fonts/dsworkfont.html
@@ -9,7 +9,7 @@
 <style type="text/css">
 html,body {height:100%;margin:0px;padding:0px;overflow:hidden;}
 @font-face {
-	font-family:"dsworkfont" !important;
+	font-family:"dsworkfont",Sans-Serif;
 	src:url("dsworkfont/dsworkfont.eot");/* IE9+ */
 	src:local('?'),
 	  url('dsworkfont/dsworkfont.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
