--- a/DsCas/portal/web/frame/style/fonts.html
+++ b/DsCas/portal/web/frame/style/fonts.html
@@ -9,12 +9,12 @@
 <style type="text/css">
 html,body {height:100%;margin:0px;padding:0px;overflow:hidden;}
 @font-face {
-	font-family:"dsworkfont" !important;
+	font-family:"dsworkfont",Sans-Serif;
 	src:url("fonts/dsworkfont.eot");/* IE9+ */
 	src:local('?'),
 	  url('fonts/dsworkfont.eot?#iefix') format('embedded-opentype'),/* IE6-IE8 */
-	  url('fonts/dsworkfont.woff') format('woff'),/* chrome¡¢firefox */
-	  url('fonts/dsworkfont.ttf') format('truetype'),/* chrome¡¢firefox¡¢opera¡¢Safari, Android, iOS 4.2+ */
+	  url('fonts/dsworkfont.woff') format('woff'),/* chromeï¿½ï¿½firefox */
+	  url('fonts/dsworkfont.ttf') format('truetype'),/* chromeï¿½ï¿½firefoxï¿½ï¿½operaï¿½ï¿½Safari, Android, iOS 4.2+ */
 	  url('fonts/dsworkfont.svg#iconfont') format('svg');/* iOS 4.1- */
 	font-weight:normal;
 	font-style:normal;
