--- a/DsDemo/DemoJava/web/mylogin.html
+++ b/DsDemo/DemoJava/web/mylogin.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui"/>
 <title></title>
 <script type="text/javascript" src="/web/js/jskey/jskey_des.js"></script>
 <link rel="stylesheet" type="text/css" href="/web/fonts/dsworkfont.css"/>
