--- a/DsDemo/DemoJava/web/login.html
+++ b/DsDemo/DemoJava/web/login.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui"/>
 <title></title>
 <script type="text/javascript" src="/web/js/jskey/jskey_des.js"></script>
-<link rel="stylesheet" type="text/css" href="/web/fonts/dsworkfont.css"/>
+<link rel="stylesheet" type="text/css" href="/web/themes/share/fonts/dsworkfont.css"/>
 <script type="text/javascript">
 function $(id){return document.getElementById(id);}
 function setCookie(k,v,d){var x=new Date();x.setDate(x.getDate()+d);document.cookie=k+"="+escape(v)+((d==null)?"":";expires="+x.toGMTString());}
