--- a/DsDemo/DemoJava/web/mylogin.html
+++ b/DsDemo/DemoJava/web/mylogin.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui"/>
 <title></title>
 <script type="text/javascript" src="/web/js/jskey/jskey_des.js"></script>
-<link rel="stylesheet" type="text/css" href="/web/fonts/dsworkfont.css"/>
+<link rel="stylesheet" type="text/css" href="/web/themes/share/fonts/dsworkfont.css"/>
 <script type="text/javascript">
 function $(id){return document.getElementById(id);}
 function setCookie(k,v,d){var x=new Date();x.setDate(x.getDate()+d);document.cookie=k+"="+escape(v)+((d==null)?"":";expires="+x.toGMTString());}
@@ -24,7 +24,7 @@ $('v').submit();
 </script>
 <style type="text/css">
 html,body{height:100%;margin:0px auto;}*{padding:0;margin:0;font-family:arial,"宋体";}
-body {background-color:#003468;background:url(/web/share/bg/bluebig.gif) repeat;}
+body {background-color:#003468;background:url(/web/themes/share/bg/bluebig.gif) repeat;}
 div, input, a{font-weight:bold;font-size:20px;line-height:38px;}
 div, input, label{color:#333;}
 a{text-decoration:underline;outline:none;}
