--- a/web/web/js/jskey/demo/jskey_validator_jquery.html
+++ b/web/web/js/jskey/demo/jskey_validator_jquery.html
@@ -70,6 +70,10 @@ td {text-align:left;}
 		<td><input type="text" name="TestIdCard" datatype="IdCard" value="" /></td>
 	</tr>
 	<tr>
+		<td>中国&香港身份证(字母大写)</td>
+		<td><input type="text" name="TestIdCard" dataType="UserCard" value="" /></td>
+	</tr>
+	<tr>
 		<td>手机号码(纯数字)</td>
 		<td><input type="text" name="TestMobile" datatype="Mobile" value="" /></td>
 	</tr>
