--- a/web/web/js/jskey/demo/jskey_validator.html
+++ b/web/web/js/jskey/demo/jskey_validator.html
@@ -61,8 +61,8 @@ td {text-align:left;}
 		<td><input type="text" name="TestIdCard" datatype="IdCard" value="" /></td>
 	</tr>
 	<tr>
-		<td>中国&香港身份证(字母大写)</td>
-		<td><input type="text" name="TestIdCard" dataType="UserCard" value="" /></td>
+		<td>中国&港澳台(字母大写)</td>
+		<td><input type="text" name="TestUserCard" dataType="UserCard" value="" /></td>
 	</tr>
 	<tr>
 		<td>手机号码(纯数字)</td>
