--- a/web/web/js/jskey/demo/jskey_validator.html
+++ b/web/web/js/jskey/demo/jskey_validator.html
@@ -65,6 +65,10 @@ td {text-align:left;}
 		<td><input type="text" name="TestUserCard" dataType="UserCard" value="" /></td>
 	</tr>
 	<tr>
+		<td>统一社会信用代码(企业)</td>
+		<td><input type="text" name="TestUnitCode" dataType="UnitCode" value="" /></td>
+	</tr>
+	<tr>
 		<td>手机号码(纯数字)</td>
 		<td><input type="text" name="TestMobile" datatype="Mobile" value="" /></td>
 	</tr>
