--- a/web/web/html/50x.html
+++ b/web/web/html/50x.html
@@ -3,13 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <title>Error</title>
-<style>
-    body {
-        width: 35em;
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif, 微软雅黑;
-    }
-</style>
+<style>body{width:35em;margin:0 auto;font-family:Tahoma,Verdana,Arial,sans-serif,微软雅黑;}</style>
 </head>
 <body>
 <h1>发生错误。</h1>
