--- a/DsEp/web/search/search.html
+++ b/DsEp/web/search/search.html
@@ -1,33 +1,15 @@
-<%@page language="java" pageEncoding="UTF-8" import="java.util.*"%>
-<%@taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
-<%@taglib prefix="fn" uri="http://java.sun.com/jsp/jstl/functions" %>
-<%common.cms.CmsFactory cms = (common.cms.CmsFactory)request.getAttribute("cms");%>
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui"/>
-<title>${category.name} - ${site.name}</title>
-<link rel="stylesheet" type="text/css" href="${ctx}/themes/web.css"/>
-<meta name="keywords" content="${category.metakeywords}"/>
-<meta name="description" content="${category.metadescription}"/>
+<title></title>
+<script type="text/javascript" src="js/jskey_page.js"></script>
+<script type="text/javascript" src="js/laytpl.js"></script>
 </head>
 <body>
-<%@include file="include/header.jsp"%>
-<script type="text/javascript" src="${ctx}/js/jskey_page.js"></script>
-<script type="text/javascript" src="${ctx}/js/laytpl/laytpl.js"></script>
-<div class="w990 clear">
-  <div class="w990">
-	<div class="listpage hei1 view">
-	  <div class="logo">&nbsp;&nbsp;当前位置：${category.name}</div>
-	  <div class="content">
-		<div id="search" style="margin:10px 0;"></div>
-		<div id="dpage"></div>
-	  </div>
-	</div>
-  </div>
-</div>
-<%@include file="include/footer.jsp"%>
+<div id="search" style="margin:10px 0;"></div>
+<div id="dpage"></div>
 </body>
 <script id="tpl" type="text/tmpl">
 找到关于“<span style="color:red;font-weight:bold;">{{ d.keyvalue }}</span>”的结果约<span style="font-size:14px;font-weight:bold;color:red;"> {{ d.size }} </span>条结果 <br/><br/>
@@ -39,7 +21,7 @@
 {{# } }}
 </script>
 <script type="text/javascript">
-var _a=location.href.split("?");
+var _a=top.location.href.split("?");
 if(_a.length>1){
   var v="";
   _a=_a[1].split("&");
@@ -48,7 +30,7 @@ if(_a.length>1){
 	document.getElementById('search').innerHTML = "请输入关键字";
   }else{
 	var tpl = document.getElementById('tpl').innerHTML;
-	var u = '${ctx}/search/search.jsp?siteid=${site.id}&v='+v+'&page=';
+	var u = 'search.jsp?siteid=${site.id}&v='+v+'&page=';
 	$('#vv').val(decodeURI(decodeURI(v)));
 	$jskey.page({object:'dpage', template:1, fn:function(e){
 		$.getJSON(u+e.page+"&r="+new Date(), function(res){
@@ -68,6 +50,7 @@ if(_a.length>1){
 			    		x[i].innerHTML = xt;
 			    	}
 			    }
+			    try{parent.document.getElementById("zwiframe").style.height=($(document.body).height()+100) + "px";}catch(ex){}
 			});
 		});
 	}});
