--- a/DsDemo/DemoJava/web/login.html
+++ b/DsDemo/DemoJava/web/login.html
@@ -64,7 +64,7 @@ a:hover{color:#0000ff;text-decoration:underline;}
 	</div></div>
 	<div class="box"><div class="vbox">
 		<span>&#xf0026;</span><input type="text" title="验证码" placeholder="" id="authcode" name="authcode" maxlength="4" class="code" value="" />
-		<img src="./ValidCode?width=90&height=38" onclick="this.src='./ValidCode?width=90&height=38&id=' + Math.random();" />
+		<img src="./authcode?width=90&height=38" onclick="this.src='./authcode?width=90&height=38&id=' + Math.random();" />
 	</div></div>
 	<div class="box">
 		<input type="button" class="button" value="登 录" onclick="doclick()" />
