--- a/DsEp/web/passport/password.html
+++ b/DsEp/web/passport/password.html
@@ -38,7 +38,7 @@ var m = [
 </form>
 </div>
 <div class="cp">
-	2014-2015 &copy; skey_chen@163.com
+	Copyright &copy; 2014-2017 skey_chen@163.com
 </div>
 </body>
 <script type="text/javascript">init();</script>
