--- a/DsEp/web/passport/pwdEp.html
+++ b/DsEp/web/passport/pwdEp.html
@@ -21,7 +21,7 @@ var m = [
 		<span id="v1"></span>&nbsp;　　账号<input type="text" title="账号/邮箱" id="account" name="account" value="" />
 	</div></div>
 	<div class="box"><div class="vbox">
-		<span class="code"><img src="../ValidCode?width=90&height=38" onclick="this.src='../ValidCode?width=90&height=38&id=' + Math.random();" /></span>
+		<span class="code"><img id="mycode" alt="请点击" style="width:90px;height:38px;" src="about:blank" onclick="this.src='../authcode?r=' + Math.random();" /></span>
 		<span id="v2" style="width:17%;">&nbsp;</span>
 		&nbsp;　验证码<input type="text" id="authcode" name="authcode" placeholder="验证码" maxlength="4" class="code" value="" />
 	</div></div>
@@ -32,10 +32,13 @@ var m = [
 </form>
 </div>
 <div class="cp">
-	2014-2015 &copy; skey_chen@163.com
+	Copyright &copy; 2014-2017 skey_chen@163.com
 	&nbsp;&nbsp;<a href="../loginEp.html">登录</a>
 	&nbsp;&nbsp;<a target="_blank" href="password.html">重置密码</a>
 </div>
 </body>
-<script type="text/javascript">init();</script>
+<script type="text/javascript">
+init();
+document.getElementById('mycode').click();
+</script>
 </html>
