--- a/DsDemo/DemoJava/web/login.html
+++ b/DsDemo/DemoJava/web/login.html
@@ -7,33 +7,34 @@
 <script type="text/javascript" src="/web/js/jskey/jskey_des.js"></script>
 <link rel="stylesheet" type="text/css" href="/web/themes/share/fonts/dsworkfont.css"/>
 <script type="text/javascript">
-function $(id){return document.getElementById(id);}
-function setCookie(k,v,d){var x=new Date();x.setDate(x.getDate()+d);document.cookie=k+"="+escape(v)+((d==null)?"":";expires="+x.toGMTString());}
-function getCookie(k){if(document.cookie.length>0){var x1=document.cookie.indexOf(k+"=");if(x1!=-1){x1=x1+k.length+1;x2=document.cookie.indexOf(";",x1);if(x2==-1){x2=document.cookie.length;}return unescape(document.cookie.substring(x1,x2));} }return "";}
+var dd = document, cc = "coo" + "kie";
+function _$(id){return document.getElementById(id);}
+function setCoo(k,v,d){var x=new Date();x.setDate(x.getDate()+d);dd[cc]=k+"="+escape(v)+((d==null)?"":";expires="+x.toGMTString());}
+function getCoo(k){if(dd[cc].length>0){var x1=dd[cc].indexOf(k+"=");if(x1!=-1){x1=x1+k.length+1;x2=dd[cc].indexOf(";",x1);if(x2==-1){x2=dd[cc].length;}return unescape(dd[cc].substring(x1,x2));} }return "";}
 if(top.location != this.location){top.location = this.location;}
 function doclick(){
 var s = "";
-if(!$('account').value){s += "账号不能为空\n";}
-if(!$('password').value){s += "密码不能为空\n";}
-if(!$('authcode').value){s += "验证码不能为空\n";}
+if(!_$('account').value){s += "账号不能为空\n";}
+if(!_$('password').value){s += "密码不能为空\n";}
+if(!_$('authcode').value){s += "验证码不能为空\n";}
 if(s != ""){alert(s);return;}
-if($("savename").checked){setCookie('savename',$('account').value,365);}
-try{$('password').value = $jskey.encodeDes($('password').value, "dswork");}catch(e){}
-$('v').submit();
+if(_$("savename").checked){setCoo('savename',_$('account').value,365);}else{setCoo('savename','',0);}
+$('password').value = $jskey.encodeDes($('password').value, "dswork");
+_$('v').submit();
 }
 </script>
 <style type="text/css">
 html,body{height:100%;margin:0px auto;}*{padding:0;margin:0;font-family:arial,"宋体";}
 body {background-color:#ffffff;}
-div, input, a{font-weight:bold;font-size:20px;line-height:38px;}
+div, input{font-weight:bold;font-size:20px;line-height:38px;}
 div, input, label{color:#333;}
-a{text-decoration:underline;outline:none;}
+a{text-decoration:underline;outline:none;font-size:12px;font-weight:normal;}
 a:link,a:visited,a:active{color:#0000bb;outline:none;}
 a:hover{color:#0000ff;text-decoration:underline;}
 
 .title {color:#003c7b;font-size:38px;font-weight:bold;text-align:center;padding:50px 0px;}
 .login{width:358px;padding:0;margin:0 auto;overflow:hidden;  height:338px;border:#003c7b solid 1px;position:absolute;left:595px;top:138px;}
-.view{padding:10px 0;overflow:hidden;margin:0 auto;width:1000px;height:473px;position:relative;overflow:hidden;background:url(/web/share/login.gif) no-repeat center center;}
+.view{padding:10px 0;overflow:hidden;margin:0 auto;width:1000px;height:473px;position:relative;overflow:hidden;background:url(/web/themes/share/img/login.gif) no-repeat center center;}
 
 .box{overflow:hidden;text-align:center;width:100%;margin:0 auto 15px auto;padding:0;border:none;}
 .box .title{background-color:#003c7b;color:#fff;width:100%;padding:3px 0;line-height:50px;font-size:22px;text-align:center;margin:0 auto;}
@@ -45,40 +46,69 @@ a:hover{color:#0000ff;text-decoration:underline;}
 .box .button{background-color:#003c7b;color:#eee;width:280px;height:50px;line-height:50px;cursor:pointer;border:none;}
 .box .button:hover{background-color:#da3b01;color:#fff;}
 .box label{font-weight:bold;font-size:16px;line-height:18px;}
+.box label.left{float:left;margin-left:45px;}
+.box label.right{float:right;margin-right:38px;}
 
 .cp{color:#666;font-size:12px;font-weight:bold;width:80%;overflow:hidden;text-align:center;padding:15px 0;margin:30px auto 0 auto;border-top:solid #ccc 1px;}
-.cp a {font-size:12px;font-weight:normal;font-family:arial;}
 </style>
 </head>
-<body onload="$('account').focus();">
+<body>
 <div class="view">
   <div class="title">广东省广州市计算机管理控制程序</div>
-  <form id="v" action="index.jsp" method="post">
+  <form id="v" action="loginAction.jsp" method="post">
   <div class="login">
 	<div class="box"><div class="title">用户登录</div></div>
 	<div class="box"><div class="vbox">
-		<span>&#xf0001;</span><input type="text" title="账号" id="account" name="account" value="" />
+		<span>&#xf1001;</span><input type="text" title="账号" id="account" name="account" autocomplete="off" value="" />
 	</div></div>
 	<div class="box"><div class="vbox">
-		<span>&#xf0002;</span><input type="password" title="密码" id="password" name="password" value="" />
+		<span>&#xf1002;</span><input type="password" title="密码" id="password" name="password" autocomplete="off" value="" />
 	</div></div>
 	<div class="box"><div class="vbox">
-		<span>&#xf0026;</span><input type="text" title="验证码" placeholder="" id="authcode" name="authcode" maxlength="4" class="code" value="" />
-		<img src="./authcode?width=90&height=38" onclick="this.src='./authcode?width=90&height=38&id=' + Math.random();" />
+		<span>&#xf1026;</span><input type="text" title="验证码" placeholder="" id="authcode" name="authcode" autocomplete="off" maxlength="4" class="code" value="" />
+		<img id="mycode" alt="请点击" style="width:90px;height:38px;" src="about:blank" onclick="this.src='./authcode?r=' + Math.random();" />
 	</div></div>
 	<div class="box">
 		<input type="button" class="button" value="登 录" onclick="doclick()" />
 	</div>
 	<div class="box">
-		<label style="float:right;margin-right:38px;">&nbsp;&nbsp;<input id="savename" type="checkbox" class="checkbox" checked="checked" onclick="">&nbsp;记住用户名&nbsp;</label>
+		<label class="left"><a onclick="return false;" href="#">忘记密码?</a></label>
+		<label class="right">&nbsp;&nbsp;<input id="savename" type="checkbox" autocomplete="off" class="checkbox" onclick="">&nbsp;记住用户名&nbsp;</label>
 	</div>
   </div>
   </form>
 </div>
 <div class="cp">
-	<a href="#">忘记密码?</a>&nbsp;&nbsp;
-	Copyright &copy; 2014-2015 skey_chen@163.com
+	Copyright &copy; 2014-2017 skey_chen@163.com
 </div>
 </body>
-<script type="text/javascript">$('account').value=getCookie('savename');$('password').value="";$('authcode').value="";</script>
+<script type="text/javascript">
+//<c:if test="${errorMsg != ''}">alert("${errorMsg}");</c:if>
+_$('mycode').click();
+var _x = getCoo('savename');
+if(_x.length > 0){
+	_$('account').value = _x;
+	_$('savename').checked = true;
+}
+else {
+	_$('account').value = "";
+	_$('savename').checked = false;
+}
+_$('password').value = "";
+_$('authcode').value = "";
+_$((_$('account').value == "") ? 'account' : 'password').focus();
+</script>
+<script type="text/javascript" src="/web/js/jquery/jquery.js"></script>
+<script type="text/javascript">
+function registKeydown(id) {
+	$("#" + id).keydown(function(event) {
+		if (event.keyCode == 13) {
+			doclick();
+		}
+	});
+}
+registKeydown("account");
+registKeydown("password");
+registKeydown("authcode");
+</script>
 </html>
