--- a/DsDemo/DemoJava/web/manage/frame/main.html
+++ b/DsDemo/DemoJava/web/manage/frame/main.html
@@ -5,6 +5,6 @@
 <title></title>
 <style type="text/css">html,body{height:100%;margin:0;padding:0px;border:0;}</style>
 </head>
-<body style="background:url(../web/share/index.jpg) no-repeat center bottom fixed;">
+<body style="background:url(/web/themes/share/img/index.jpg) no-repeat center bottom fixed;">
 </body>
 </html>
