--- a/web/web/js/jskey/demo/jskey_upload.html
+++ b/web/web/js/jskey/demo/jskey_upload.html
@@ -23,7 +23,7 @@
  
 <script type="text/javascript">
 var ps = {
-	url : '/web/upload/jskey_upload.jsp?sessionkey=1&filekey=1&uploadone=false&ext=file',
+	url : '/webio/io/upload.jsp?sessionkey=1&filekey=1&uploadone=false&ext=file',
 	runtimes : 'html5,flash,silverlight',
 	chunk_size : 0,
 	resize : { width : 320, height : 240, quality : 90 },
