--- a/web/web/js/jskey/demo/jskey_upload_all.html
+++ b/web/web/js/jskey/demo/jskey_upload_all.html
@@ -38,7 +38,7 @@ $(function() {
 	var ps = {
 		runtimes : 'html5,flash,silverlight,html4',
 		//url : 'x.html',
-		url : '/web/upload/jskey_upload.jsp?sessionkey=1&filekey=1&uploadone=false&ext=file',
+		url : '/webio/io/upload.jsp?sessionkey=1&filekey=1&uploadone=false&ext=file',
 		//chunk_size : '1mb',
 		unique_names : true,
 		filters : {
