--- a/DsDemo/DemoJava/web/test.html
+++ b/DsDemo/DemoJava/web/test.html
@@ -11,6 +11,6 @@ function getCookie(k){if(document.cookie.length>0){var x1=document.cookie.indexO
 </script>
 </head>
 <body>
-	<iframe src="http://192.168.1.47:888/DemoJava/cookie.jsp" />
+	<iframe src="http://192.168.1.47:8080/DemoJava/cookie.jsp" /><!-- 使用另一个ip模拟跨域访问 -->
 </body>
 </html>
