--- a/web/web/themes/share/fonts/dsworkfont.html
+++ b/web/web/themes/share/fonts/dsworkfont.html
@@ -58,6 +58,12 @@ b{margin:0 8px;font-size:20px;color:#ff0000;font-weight:normal;}
 	<i>&#xf1030;</i><b>&amp;#xf1030;</b>
 	<i>&#xf1031;</i><b>&amp;#xf1031;</b>
 	<i>&#xf1032;</i><b>&amp;#xf1032;</b>
+	<i>&#xf1033;</i><b>&amp;#xf1033;</b>
+	<i>&#xf1034;</i><b>&amp;#xf1034;</b>
+	<i>&#xf1035;</i><b>&amp;#xf1035;</b>
+	<i>&#xf1036;</i><b>&amp;#xf1036;</b>
+	<i>&#xf1037;</i><b>&amp;#xf1037;</b>
+	<i>&#xf1038;</i><b>&amp;#xf1038;</b>
 </div>
 </body>
 </html>
