增加订单字体图标，扩展到40个

--- a/web/web/themes/share/fonts/dsworkfont.html
+++ b/web/web/themes/share/fonts/dsworkfont.html
@@ -64,6 +64,8 @@ b{margin:0 8px;font-size:20px;color:#ff0000;font-weight:normal;}
 	<i>&#xf1036;</i><b>&amp;#xf1036;</b>
 	<i>&#xf1037;</i><b>&amp;#xf1037;</b>
 	<i>&#xf1038;</i><b>&amp;#xf1038;</b>
+	<i>&#xf1039;</i><b>&amp;#xf1039;</b>
+	<i>&#xf1040;</i><b>&amp;#xf1040;</b>
 </div>
 </body>
 </html>
