--- a/web/web/themes/share/fonts/dsworkfont.html
+++ b/web/web/themes/share/fonts/dsworkfont.html
@@ -66,6 +66,13 @@ b{margin:0 8px;font-size:20px;color:#ff0000;font-weight:normal;}
 	<i>&#xf1038;</i><b>&amp;#xf1038;</b>
 	<i>&#xf1039;</i><b>&amp;#xf1039;</b>
 	<i>&#xf1040;</i><b>&amp;#xf1040;</b>
+	<i>&#xf1041;</i><b>&amp;#xf1041;</b>
+	<i>&#xf1042;</i><b>&amp;#xf1042;</b>
+	<i>&#xf1043;</i><b>&amp;#xf1043;</b>
+	<i>&#xf1044;</i><b>&amp;#xf1044;</b>
+	<i>&#xf1045;</i><b>&amp;#xf1045;</b>
+	<i>&#xf1046;</i><b>&amp;#xf1046;</b>
+	<i>&#xf1047;</i><b>&amp;#xf1047;</b>
 </div>
 </body>
 </html>
