--- a/web/web/themes/share/fonts/dsworkfont.html
+++ b/web/web/themes/share/fonts/dsworkfont.html
@@ -73,6 +73,7 @@ b{margin:0 8px;font-size:20px;color:#ff0000;font-weight:normal;}
 	<i>&#xf1045;</i><b>&amp;#xf1045;</b>
 	<i>&#xf1046;</i><b>&amp;#xf1046;</b>
 	<i>&#xf1047;</i><b>&amp;#xf1047;</b>
+	<i>&#xf1048;</i><b>&amp;#xf1048;</b>
 </div>
 </body>
 </html>
