--- a/web/web/index.html
+++ b/web/web/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui"/>
-<title></title>
-<script type="text/javascript">
-</script>
-<style type="text/css">
-</style>
+<title>Error</title>
+<style>body{width: 40em;margin: 0 auto;font-family: Tahoma, Verdana, Arial, sans-serif, 微软雅黑;}</style>
 </head>
 <body>
+<h1>欢迎！</h1>
+<h1>Welcome !</h1>
 </body>
 </html>
