--- a/web/web/50x.html
+++ b/web/web/50x.html
@@ -4,16 +4,16 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui"/>
 <title>Error</title>
-<style>body{width: 40em;margin: 0 auto;font-family: Tahoma, Verdana, Arial, sans-serif, Î¢ÈíÑÅºÚ;}</style>
+<style>body{width: 40em;margin: 0 auto;font-family: Tahoma, Verdana, Arial, sans-serif, å¾®è½¯é›…é»‘;}</style>
 </head>
 <body>
-<h1>·¢Éú´íÎó¡£</h1>
+<h1>å‘ç”Ÿé”™è¯¯ã€‚</h1>
 <h1>An error occurred.</h1>
 
-<p>ºÜ±§Ç¸£¬ÄúËùÒªµÄÒ³ÃæÄ¿Ç°ÎŞÈ¨Ê¹ÓÃ¡£<br/>ÇëÈ·¶¨ÄúÓĞÈ¨·ÃÎÊ¸ÃÒ³Ãæ£¬»òÉÔºóÔÙÊÔ¡£</p>
+<p>å¾ˆæŠ±æ­‰ï¼Œæ‚¨æ‰€è¦çš„é¡µé¢ç›®å‰æ— æƒä½¿ç”¨ã€‚<br/>è¯·ç¡®å®šæ‚¨æœ‰æƒè®¿é—®è¯¥é¡µé¢ï¼Œæˆ–ç¨åå†è¯•ã€‚</p>
 <p>Sorry, the page you are looking for is currently unavailable.<br/>Please make sure that you have the right to access the page, or try again later.</p>
 
-<p><em>ÏµÍ³¹ÜÀíÔ±¡£</em></p>
+<p><em>ç³»ç»Ÿç®¡ç†å‘˜ã€‚</em></p>
 <p><em>system administrator.</em></p>
 </body>
 </html>
